<?xml version="1.0"?>
<package>
  <name>denso_ethercat</name>
  <version>1.0.0</version>
  <description>This package contains ros_control based robot controller for DENSO VS050 EtherCAT Motor Driver Control System</description>

  <author email="colan@robo.mein.nagoya-u.ac.jp">Jacinto E. Colan Zaita</author>
  <maintainer email="colan@robo.mein.nagoya-u.ac.jp">Jacinto E. Colan Zaita</maintainer>

  <license>GPLv2</license>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>ethercat_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>ethercat_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>


</package>
